<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/demo_radius_5dp_white"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">


        <ImageView
            android:id="@+id/iv_dialog_params"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:src="@mipmap/demo_close" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/demo_radius_5dp_light_gray"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <EditText
                android:id="@+id/edt_gameName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:hint="@string/parame_game_name"
                android:textColor="#000000"
                android:textColorHint="#969696"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/demo_radius_5dp_light_gray"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <EditText
                android:id="@+id/edt_gameAppId"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:hint="@string/parame_game_appid"
                android:textColor="#000000"
                android:textColorHint="#969696"
                android:textSize="16sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/demo_radius_5dp_light_gray"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <EditText
                android:id="@+id/edt_gameId"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:hint="@string/parame_game_id"
                android:textColor="#000000"
                android:textColorHint="#969696"
                android:textSize="16sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/demo_radius_5dp_light_gray"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <EditText
                android:id="@+id/edt_paysdk_signkey"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:hint="@string/parame_sdk_str"
                android:textColor="#000000"
                android:textColorHint="#969696"
                android:textSize="16sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/demo_radius_5dp_light_gray"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <EditText
                android:id="@+id/edt_paysdk_ipaddress"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:ems="10"
                android:hint="@string/parame_sdk_ip"
                android:textColor="#000000"
                android:textColorHint="#969696"
                android:textSize="16sp"></EditText>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/demo_radius_5dp_light_gray"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <EditText
                android:id="@+id/edt_goodsprice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:ems="10"
                android:hint="@string/parame_props_price"
                android:textColor="#000000"
                android:textColorHint="#969696"
                android:textSize="16sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_setgameparams"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/demo_radius_5dp_light_blue"
            android:maxHeight="30dp"
            android:maxWidth="130dp"
            android:text="@string/parame_button_str"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">

    </LinearLayout>
</LinearLayout>